--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-    <title>FACT</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css"
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>FACT</title>
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
-<p>Test</p>
-Test 2
+    <body>
+        <div class="container">
+        <h1>Test</h1>
+            <p>Test 2</p>
+    </div>
+    </body>
+
 </html>
