fixed a small css issue in global

--- a/index.html
+++ b/index.html
@@ -3,15 +3,79 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>FACT</title>
+        <link rel="shortcut icon" href="../images/favicon.ico">
+        <title>InterVarsity</title>
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
+        <script src="js/bootstrap.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="css/global.css" type="text/css">
+		<link rel="stylesheet" href="css/index.css" type="text/css">
     </head>
     <body>
-        <div class="container">
-        <h1>Test</h1>
-            <p>Test 2</p>
-    </div>
+        <div id="maintext">
+            <a href="index.html"><img src="images/intervarsityheader.png" alt="InterVarsity Logo"></a>
+		<div id="border">
+		<div class="menuwrapper">
+			<div class="menuinner">
+				<div id="access">
+					<div class="menu-header">
+						<ul id="menu-top-menu" class="menu">
+							<li id="menubar" class="home">
+								<a href="index.html">Home</a></li>
+							<li class="largegroup">
+								<a href="html/largegroup.html">Large Group</a></li>
+							<li class="events">
+								<a href="html/events.html">Events</a></li>
+							<li class="aboutus">
+								<a href="html/aboutus.html">About Us</a></li>
+							<li id="menubarr" class="contactus">
+								<a href="html/contactus.html">Contact Us</a></li>
+						</ul>
+					</div>
+
+			</div>
+		</div>
+		</div>
+		<div class="row">
+		<div class="col-sm-8">
+			<h2>InterVarsity at Montana State University</h2>
+				<div id="photo">
+					<img src="images/grouppic.jpg" alt="IV Group Picture">
+				</div>
+
+			<p> &nbsp;&nbsp;&nbsp;We are located on the campus of Montana State University in beautiful Bozeman Montana,
+				where we have been for over 50 years! InterVarsity is a Christian community for students
+				who have a desire to find a higher purpose for their years at MSU. Despite the name,
+				InterVarsity is not a sports thing. Really, it's a big group of friends who are on a journey to pursue Jesus together.
+				There are tons of ways to get involved in InterVarsity, and we encourage people to stop by any of our activities to just check us out.
+				So if you're interested in pursuing things like friendship, community, purpose, fun, or faith,
+				then consider putting aside your plans for a couple of hours and visit one of InterVarsity's many offerings. At the very least,
+				you'll meet some cool people. Then again, it could make a colossal impact on your college experience at MSU.
+		</div>
+        <div class="col-sm-4">
+            <h3>Events</h3>
+            <li>Largegroup</li>
+            <li>Men's Group</li>
+            <li>Women's Group</li>
+
+            </div>
+            </div>
+	</div>
+		<div id="footerback">
+			<div id="footer">
+				<ul>
+					<li class="index"><a href="index.html">Home</a></li>
+					<li><a href="html/largegroup.html">Large Group</a></li>
+					<li><a href="html/events.html">Events</a></li>
+					<li><a href="html/aboutus.html">About Us</a></li>
+					<li><a href="html/contactus.html">Contact Us</a></li>
+
+				</ul>
+
+			</div>
+		</div>
+        </div>
     </body>
 
 </html>
