css updates and code fixes

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -13,7 +13,7 @@
 		</head>
 
 <body>
-  <div id="container">
+  <div id="maintext">
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo"></a>
 		<div id="border">
 		<div class="menuwrapper">
