--- a/html/contactus.html
+++ b/html/contactus.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <div id="container">
+  <div id="maintext">
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo"></a>
 		<div id="border">
 		<div class="menuwrapper">
@@ -37,7 +37,7 @@
 		</div>
 		</div>
 		</div>
-	<div id="maintext">
+	<div id="mainstuff">
 		<ul>
 			<li>Find us on &nbsp; <a href="http://www.facebook.com/groups/181928895213186" target="_blank">
 				<img src="../images/facebook1.png" alt="InterVarsity Link Facebook Icon"></a></li>
