--- a/html/largegroup.html
+++ b/html/largegroup.html
@@ -12,7 +12,8 @@
 <body>
 
 
-  <div id="container">
+  <div id="maintext">
+
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo"></a>
 		<div id="border">
 		<div class="menuwrapper">
@@ -35,7 +36,10 @@
 				</div>
 			</div>
 		</div>
-		<div id="maintext">
+        <div class="row">
+		 <div class="col-sm-12">
+
+
 			<h2>Large Group</h2>
 				<div id="photo">
 					<img src="../images/largegroup.jpg" alt="Large Group Meeting">
@@ -50,7 +54,8 @@
 				what we are about. We would love to see you there!
 		</p>
 		</div>
-		</div>
+            </div>
+		     </div>
 			<div id="footerback">
 				<div id="footer">
 					<ul>
@@ -59,10 +64,11 @@
 						<li><a href="events.html">Events</a></li>
 						<li><a href="aboutus.html">About Us</a></li>
 						<li><a href="contactus.html">Contact Us</a></li>
-					</ul>
-				</div>
+                    </ul>
+                </div>
 			</div>
 
-	</div>
+            </div>
+
 	</body>
 </html>
