--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<li id="menubar" class="home">
 								<a href="index.html">Home</a></li>
 							<li class="largegroup">
-								<a href="html/largegroup.html">Large Group</a></li>
+								<a href="html/largegroup.html">Large Group</a</li>
 							<li class="events">
 								<a href="html/events.html">Events</a></li>
 							<li class="aboutus">
@@ -33,7 +33,6 @@
 								<a href="html/contactus.html">Contact Us</a></li>
 						</ul>
 					</div>
-
 			</div>
 		</div>
 		</div>
