--- a/html/events.html
+++ b/html/events.html
@@ -12,7 +12,7 @@
 <body>
 
 
-  <div id="container">
+  <div id="maintext">
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo"></a>
 		<div id="border">
 		<div class="menuwrapper">
