implementing bootstrap nav bar and more responsiveness with img

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -13,8 +13,8 @@
 		</head>
 
 <body>
-  <div id="maintext">
-		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo"></a>
+  <div class="container-fluid">
+		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo" ></a>
 		<div id="border">
 		<div class="menuwrapper">
 			<div class="menuinner">
@@ -36,8 +36,10 @@
 				</div>
 			</div>
 		</div>
-
+      <div class="row">
+		 <div class="col-sm-12">
 	<div id="maintext">
+
 		<h2>About Us</h2>
 		<p> &nbsp;&nbsp;&nbsp;We are affiliated with the national organization InterVarsity
 							Christian Fellowship/USA®, which is a member of the International
@@ -107,7 +109,8 @@
 			</p>
 		</div>
 	</div>
-
+          </div>
+            </div>
 	</div>
 		<div id="footerback">
 			<div id="footer">
