--- a/html/contactus.html
+++ b/html/contactus.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div id="maintext">
+  <div class="container-fluid">
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo"></a>
 		<div id="border">
 		<div class="menuwrapper">
@@ -34,13 +34,16 @@
 		</div>
 		</div>
 		</div>
+              <div class="row">
+		 <div class="col-sm-12">
 	<div id="mainstuff">
 		<ul>
 			<li>Find us on &nbsp; <a href="http://www.facebook.com/groups/181928895213186" target="_blank">
 				<img src="../images/facebook1.png" alt="InterVarsity Link Facebook Icon"></a></li>
 		</ul>
 	</div>
-
+    </div>
+            </div>
 	</div>
 			<div id="footerback">
 				<div id="footer">
@@ -53,6 +56,7 @@
 					</ul>
 				</div>
 			</div>
+
 
 	</div>
 	</body>
