--- a/html/events.html
+++ b/html/events.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div id="maintext">
+  <div class="container-fluid">
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo"></a>
 		<div id="border">
 		<div class="menuwrapper">
@@ -36,9 +36,11 @@
 			</div>
 		</div>
 		</div>
+            <div class=row>
+                <div class=sm-col-12>
 			<h2>Events</h2>
 			<div id="photo">
-				<img src="../images/event.jpg" alt="2012 Decathalon">
+				<img src="../images/event.jpg" class="img-responsive" alt="2012 Decathalon">
 			</div>
 			<ul>
 			<li>Large Group - Thursdays SOB Barn at 7:30PM</li>
@@ -47,6 +49,8 @@
 			<li>We also randomly get together for fun games and activities</li>
 			</ul>
 		</div>
+            </div>
+      </div>
 
 	</div>
 			<div id="footerback">
