--- a/html/largegroup.html
+++ b/html/largegroup.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div id="maintext">
+  <div class="container-fluid">
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo"></a>
 		<div id="border">
 		<div class="menuwrapper">
@@ -40,7 +40,7 @@
 
 			<h2>Large Group</h2>
 				<div id="photo">
-					<img src="../images/largegroup.jpg" alt="Large Group Meeting">
+					<img src="../images/largegroup.jpg" class="img-responsive" alt="Large Group Meeting">
 				</div>
 			<p>
 				'Large Group' or 'IV' is where we gather as a whole community each week.
