--- a/index.html
+++ b/index.html
@@ -5,17 +5,43 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="../images/favicon.ico">
         <title>InterVarsity</title>
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <script src="js/bootstrap.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+
         <link rel="stylesheet" href="css/global.css" type="text/css">
 		<link rel="stylesheet" href="css/index.css" type="text/css">
     </head>
     <body>
-        <div id="maintext">
-            <a href="index.html"><img src="images/intervarsityheader.png" alt="InterVarsity Logo"></a>
+        <div class="container-fluid">
+            <a href="index.html"><img src="images/intervarsityheader.png" alt="InterVarsity Logo" class="img-responsive"></a>
 		<div id="border">
+ <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="izcon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">InterVaristy</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Large Group</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+            <!--
 		<div class="menuwrapper">
 			<div class="menuinner">
 				<div id="access">
@@ -36,11 +62,12 @@
 			</div>
 		</div>
 		</div>
+-->
 		<div class="row">
-		<div class="col-sm-8">
+		<div class="col-sm-9">
 			<h2>InterVarsity at Montana State University</h2>
 				<div id="photo">
-					<img src="images/grouppic.jpg" alt="IV Group Picture">
+					<img src="images/grouppic.jpg" alt="IV Group Picture" class="img-responsive">
 				</div>
 
 			<p> &nbsp;&nbsp;&nbsp;We are located on the campus of Montana State University in beautiful Bozeman Montana,
@@ -52,7 +79,7 @@
 				then consider putting aside your plans for a couple of hours and visit one of InterVarsity's many offerings. At the very least,
 				you'll meet some cool people. Then again, it could make a colossal impact on your college experience at MSU.
 		</div>
-        <div class="col-sm-4">
+        <div class="col-md-3">
             <h3>Events</h3>
             <ul>
             <li>Largegroup</li>
@@ -76,6 +103,8 @@
 			</div>
 		</div>
         </div>
+        <script src="js/bootstrap.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </body>
 
 </html>
