--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             <a href="index.html"><img src="images/intervarsityheader.png" alt="InterVarsity Logo" class="img-responsive"></a>
 		<div id="border">
  <nav class="navbar navbar-default">
-  <div class="container-fluid">
+
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
-        <span class="izcon-bar"></span>
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">InterVaristy</a>
+      <a class="navbar-brand" href="#">InterVarsity</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,10 +36,8 @@
           <li><a href="#">Events</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Contact Us</a></li>
-
-
+        </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
 </nav>
             <!--
 		<div class="menuwrapper">
@@ -89,6 +87,23 @@
             </div>
             </div>
 	</div>
+
+            <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+   <div class="navbar-header">
+      <a class="navbar-brand" href="#">InterVarsity</a>
+   </div>
+   <div>
+      <ul class="nav navbar-nav">
+         <li class="active"><a href="#">Home</a></li>
+         <li><a href="#">Large Group</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+
+      </ul>
+   </div>
+</nav>
+<!--
 		<div id="footerback">
 			<div id="footer">
 				<ul>
@@ -102,6 +117,7 @@
 
 			</div>
 		</div>
+-->
         </div>
         <script src="js/bootstrap.js"></script>
         <script src="js/bootstrap.min.js"></script>
