--- a/index.html
+++ b/index.html
@@ -78,12 +78,15 @@
 				you'll meet some cool people. Then again, it could make a colossal impact on your college experience at MSU.
 		</div>
         <div class="col-md-3">
+            <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=500&amp;wkst=1&amp;bgcolor=%233366ff&amp;src=msuivleaders%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FDenver" style=" border-width:0 " width="300" height="500" frameborder="0" scrolling="no"></iframe>
+<!--
             <h3>Events</h3>
             <ul>
             <li>Largegroup</li>
             <li>Men's Group</li>
             <li>Women's Group</li>
             </ul>
+-->
             </div>
             </div>
 	</div>
