fp new header links

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">InterVarsity</a>
+      <a class="navbar-brand" href="index.html">InterVarsity</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Large Group</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
+        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="html/largegroup.html">Large Group</a></li>
+          <li><a href="html/events.html">Events</a></li>
+          <li><a href="html/aboutus.html">About Us</a></li>
+          <li><a href="html/contactus.html">Contact Us</a></li>
         </ul>
     </div><!-- /.navbar-collapse -->
 </nav>
@@ -93,15 +93,15 @@
 
             <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
    <div class="navbar-header">
-      <a class="navbar-brand" href="#">InterVarsity</a>
+      <a class="navbar-brand" href="index.html">InterVarsity</a>
    </div>
    <div>
       <ul class="nav navbar-nav">
-         <li class="active"><a href="#">Home</a></li>
-         <li><a href="#">Large Group</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
+         <li class="active"><a href="index.html">Home</a></li>
+         <li><a href="html/largegroup.html">Large Group</a></li>
+          <li><a href="html/events.html">Events</a></li>
+          <li><a href="html/aboutus.html">About Us</a></li>
+          <li><a href="html/contactus.html">Contact Us</a></li>
 
       </ul>
    </div>
