css fixed and html cleanup

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <![endif]-->
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <a href="index.html"><img src="images/intervarsityheader.png" alt="InterVarsity Logo" class="img-responsive"></a>
 		<div id="border">
  <nav class="navbar navbar-default">
@@ -45,7 +45,7 @@
     </div><!-- /.navbar-collapse -->
 </nav>
 		<div class="row">
-		<div class="col-sm-9">
+		<div class="col-sm-9 col-centered">
 			<h2>InterVarsity at Montana State University</h2>
 				<div id="photo">
 					<img src="images/grouppic.jpg" alt="IV Group Picture" class="img-responsive">
@@ -67,7 +67,7 @@
             </div>
 	</div>
 
-            <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
    <div class="navbar-header">
       <a class="navbar-brand" href="index.html">InterVarsity</a>
    </div>
