--- a/html/events.html
+++ b/html/events.html
@@ -5,16 +5,14 @@
 		<link rel="shortcut icon" href="../images/favicon.ico">
 		<title>InterVarsity at Montana State University</title>
         <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
-        <link href="../css/style.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="../css/global.css" type="text/css">
 		<link rel="stylesheet" href="../css/events.css" type="text/css">
 		</head>
 
 <body>
 
-  <div class="container-fluid">
+  <div class="container">
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo" class="img-responsive"></a>
-		<div id="border">
  <nav class="navbar navbar-default">
 
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -25,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">InterVarsity</a>
+      <a class="navbar-brand" href="../index.html">InterVarsity</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,20 +38,20 @@
     </div><!-- /.navbar-collapse -->
 </nav>
             <div class=row>
-                <div class=sm-col-12>
+      <div class=sm-col-12>
 			<h2>Events</h2>
 			<div id="photo">
 				<img src="../images/event.jpg" class="img-responsive" alt="2012 Decathalon">
-			</div>
+
 			<ul>
 			<li>Large Group - Thursdays SOB Barn at 7:30PM</li>
 			<li>Noon Prayer - Danforth Chapel Weekdays at 12:00PM</li>
 			<li>International Student Ministries - The SUB Tuesdays at 7:30PM</li>
 			<li>We also randomly get together for fun games and activities</li>
 			</ul>
-		</div>
             </div>
-      </div>
+            </div>
+            </div>
 
 
 			<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
