--- a/html/largegroup.html
+++ b/html/largegroup.html
@@ -5,14 +5,13 @@
 		<link rel="shortcut icon" href="../images/favicon.ico">
 		<title>InterVarsity at Montana State University</title>
         <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
-        <link href="../css/style.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="../css/global.css" type="text/css">
 		<link rel="stylesheet" href="../css/largegroup.css" type="text/css">
 	</head>
 
 <body>
 
-  <div class="container-fluid">
+  <div class="container">
 		<a href="../index.html"><img src="../images/intervarsityheader.png" alt="InterVarsity Logo" class="img-responsive"></a>
 		<div id="border">
  <nav class="navbar navbar-default">
@@ -25,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">InterVarsity</a>
+      <a class="navbar-brand" href="../index.html">InterVarsity</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
