--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     </head>
     <body>
         <div class="container">
+            <div class="headerimg">
             <a href="index.html"><img src="images/intervarsityheader.png" alt="InterVarsity Logo" class="img-responsive"></a>
-		<div id="border">
+		      </div>
+                <div id="border">
  <nav class="navbar navbar-default">
 
     <!-- Brand and toggle get grouped for better mobile display -->
