--- a/html/events.html
+++ b/html/events.html
@@ -7,7 +7,33 @@
         <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="../css/global.css" type="text/css">
 		<link rel="stylesheet" href="../css/events.css" type="text/css">
-		</head>
+<!-- jQuery (required) -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+<!-- Anything Slider -->
+	<link rel="stylesheet" href="../css/anythingslider.css">
+	<script src="../js/jquery.anythingslider.js"></script>
+
+	<!-- AnythingSlider optional extensions -->
+	<!-- <script src="js/jquery.anythingslider.fx.js"></script> -->
+	<!-- <script src="js/jquery.anythingslider.video.js"></script> -->
+
+	<!-- Define slider dimensions here -->
+<!--
+	<style>
+	#slider { width: 700px; height: 390px; }
+	</style>
+-->
+
+	<!-- AnythingSlider initialization -->
+	<script>
+		// DOM Ready
+		$(function(){
+			$('#slider').anythingSlider();
+		});
+	</script>
+    </head>
+
 
 <body>
 
@@ -40,16 +66,24 @@
             <div class=row>
       <div class=sm-col-12>
 			<h2>Events</h2>
-			<div id="photo">
-				<img src="../images/event.jpg" class="img-responsive" alt="2012 Decathalon">
+<!--			<div id="photo">-->
+           <ul id="slider">
 
+		<li><img src="../images/event.jpg" class=img-responsive alt=""></li>
+
+		<li><img src="../images/grouppic.jpg" class=img-responsive alt=""></li>
+
+		<li><img src="../images/largegroup.jpg" class=img-responsive alt=""></li>
+	</ul>
+<!--				<img src="../images/event.jpg" class="img-responsive" alt="2012 Decathalon">-->
+            </div>
 			<ul>
 			<li>Large Group - Thursdays SOB Barn at 7:30PM</li>
 			<li>Noon Prayer - Danforth Chapel Weekdays at 12:00PM</li>
 			<li>International Student Ministries - The SUB Tuesdays at 7:30PM</li>
 			<li>We also randomly get together for fun games and activities</li>
 			</ul>
-            </div>
+
             </div>
             </div>
 
@@ -70,7 +104,7 @@
    </div>
 </nav>
       </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
         <script src="../js/bootstrap.js"></script>
 	</body>
 </html>
